# microvium-ffi-example

./: .gitignore  CMakeLists.txt  app_ffi.cpp  app_ffi.hpp  ffi-new-object-example.sln  ffi-new-object-example.vcxproj  ffi-new-object-example.vcxproj.filters  ffi.js  main.cpp  main.js  mvm_newObject.js  readme.md  runtime-log.js  utils.js
